--- a/MultipleQueueDispatcher.Test.NetFramework/packages.config
+++ b/MultipleQueueDispatcher.Test.NetFramework/packages.config
@@ -4,6 +4,7 @@
   <package id="Moq" version="4.9.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.9.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
